--- a/colorpicker.html
+++ b/colorpicker.html
@@ -6,11 +6,25 @@
  <meta name="viewpoint" content="width=device-width,inititial">
 
 
-  <link rel="stylesheet" type="text/css" href=colorpicker.css>
+ <!-- Latest compiled and minified CSS -->
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+ <!-- jQuery library -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+ <!-- Latest compiled JavaScript -->
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
   </head>
-
+    <div class=
   <body>
+  <div class="container-fluid"
+    <div class=row>
+      <div class="col-sm-12".
+        About Angel Mochoge
+      </div>
+    </div>
+  </div>
 
-    </body>
+  </body>
     </html>
