--- a/colorpicker.html
+++ b/colorpicker.html
@@ -18,9 +18,9 @@
   </head>
     <div class=
   <body>
-  <div class="container-fluid"
+  <div class="container-fluid">
     <div class=row>
-      <div class="col-sm-12".
+      <div class="col-sm-12">
         About Angel Mochoge
       </div>
     </div>
