--- a/colorpicker.html
+++ b/colorpicker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <<title>Instruction</title>
+   <title>Instruction</title>
  <meta charset="utf-8">
  <meta name="viewpoint" content="width=device-width,inititial">
 
@@ -23,7 +23,12 @@
         About Angel Mochoge
       </div>
     </div>
-  </div>
 
+  <div class="row">
+     <div class="col-sm-12">
+      <img id=coverimage src="imgs/coverimage.jpg" alt="arcade game cabinets">
+    </div>
+  </div>
+</div>
   </body>
     </html>
