--- a/colorpicker.html
+++ b/colorpicker.html
@@ -14,6 +14,7 @@
 
  <!-- Latest compiled JavaScript -->
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+ <link rel="stylesheet" href="colorpicker.css">
 
   </head>
   <body>
