--- a/colorpicker.html
+++ b/colorpicker.html
@@ -38,8 +38,9 @@
   <body>
   <div class="container-fluid">
     <div class=row>
-      <div class="col-sm-12">
-    <span id="title">About Angel Mochoge
+      <div class="col-sm-6">
+    <span id="title">About Angel Mochoge</span>
+  </div>
       </div>
     </div>
 
@@ -49,8 +50,14 @@
     </div>
   </div>
 
-
-
+<div class="row">
+  <div class = "col-sm-12">
+  <p id=paragraph>About Angel Mochoge and this is my life. My zodiac sign is a Leo.
+    Some of my hobbies are eating, riding my bike, playing piano, running track, and singing my own personal concerts in the shower. I'm at a camp called ucodegirl and learning how to makke a website I like because
+  I'm learning how to code in different ways because I only learned how to code in blocks and now I learned how to code in html. I like ucodegirl because it helps me broaden my knowledge of stem and could help me pick my career in the
+future. We are makeing our own personal websites and working for a client to build their own website.</p>
+ </div>
+</div>
 <div class="row">
   <div class="col-sm-6">
     <div class="halfrow">
@@ -91,6 +98,8 @@
     <p id="colorgenerated"></p>
   </div>
 </div>
+
+
 
 
 
